library/database_universe/test/errors/index/duplicate_name.dart
// same name

import 'package:database_universe/database_universe.dart';

@collection
class Model {
  late int id;

  @Index(name: 'myindex')
  String? prop1;

  @Index(name: 'myindex')
  String? prop2;
}
